Fix classify and tag bugs