@@ -5,7 +5,6 @@ import static seedu.address.logic.parser.CommandParserTestUtil.assertParseFailur
 import static seedu.address.logic.parser.CommandParserTestUtil.assertParseSuccess;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Predicate;
 
@@ -26,14 +25,32 @@ public class ClassifyCommandParserTest {
     }
 
     @Test
-    public void parse_validArgs_returnsClassifyCommand() {
-        // no leading and trailing whitespaces
-        List<Predicate<Person>> predicates = new ArrayList<>();
-        predicates.add(new TagsContainsKeywordsPredicate(Arrays.asList("python", "java")));
-        ClassifyCommand expectedClassifyCommand = new ClassifyCommand(predicates);
-        assertParseSuccess(parser, " t/python java", expectedClassifyCommand);
+    public void parse_singleTag_returnsClassifyCommand() {
+        List<Predicate<Person>> singleTagPredicates = new ArrayList<>();
+        singleTagPredicates.add(new TagsContainsKeywordsPredicate(List.of("python")));
+        ClassifyCommand expectedCommand = new ClassifyCommand(singleTagPredicates);
+        assertParseSuccess(parser, " t/python", expectedCommand);
+        assertParseSuccess(parser, " t/python   ", expectedCommand);
+    }
 
-        // multiple whitespaces between keywords
-        assertParseSuccess(parser, " t/python    java", expectedClassifyCommand);
+    @Test
+    public void parse_multipleTagsWithAndLogic_returnsClassifyCommand() {
+        List<Predicate<Person>> multipleTagPredicates = new ArrayList<>();
+        multipleTagPredicates.add(new TagsContainsKeywordsPredicate(List.of("python")));
+        multipleTagPredicates.add(new TagsContainsKeywordsPredicate(List.of("java")));
+        ClassifyCommand expectedCommand = new ClassifyCommand(multipleTagPredicates);
+        assertParseSuccess(parser, " t/python t/java", expectedCommand);
+    }
+
+    @Test
+    public void parse_multipleJobPositions_throwsParseException() {
+        assertParseFailure(parser, " j/Engineer j/Designer",
+                ClassifyCommand.MESSAGE_MULTIPLE_JOB_POSITIONS);
+    }
+
+    @Test
+    public void parse_multipleTeams_throwsParseException() {
+        assertParseFailure(parser, " tm/Engineering tm/Design",
+                ClassifyCommand.MESSAGE_MULTIPLE_TEAMS);
     }
 }
